--- a/css/lixiao.css
+++ b/css/lixiao.css
@@ -42,9 +42,9 @@ h4 {
 
 #topToolbar{
     _display:none;
-    padding-top: 20px solid #3cb371;
+    padding-top: 20px solid #ff70a9;
     width:100%; height:-30px; line-height:0px;
-    background:#3cb371; border-bottom:0px solid #409F89;
+    background:#ff70a9; border-bottom:0px solid #409F89;
     position:fixed; top:-10px; left:0;
     _position:absolute; _top:0;
 }
@@ -53,7 +53,7 @@ h4 {
     position: relative;
     width: 100%;
     height: 40px;
-    background-color: #3cb371;
+    background-color: #ff70a9;
     color: #fff;
     /* text-align: center; */
     font-size: 18px;
@@ -124,7 +124,7 @@ h4 {
 
 #bottomToolbar{
     width:100%; height:100px; line-height:80px;
-    background:#ffffff; border-top:0px solid #409F89;
+    background:#ffffff; border-top:0px solid #ff70a9;
     position:fixed; bottom:0; left:0;
     _position:absolute; _top:expression(documentElement.scrollTop+documentElement.clientHeight-this.offsetHeight);
     /*
@@ -219,7 +219,7 @@ h4 {
     margin-left: 20px;
     float:left;
     width: 40%;
-    background-color: rgb(74, 179, 179);
+    background-color: #ff70a9;
     color: white;
     border-radius: 15px;
 }
@@ -228,7 +228,7 @@ h4 {
     margin-top: 5px;
     margin-left: 20%;
     float: left;
-    color: rgb(74, 179, 179);
+    color: #ff70a9;
     width: auto;
 }
 .list{
@@ -260,4 +260,23 @@ h4 {
 
 .list img{
     max-width: 95%;
+}
+
+.info1{
+    margin-top: 5px;
+    margin-left: 20%;
+    float:left;
+    width: auto;
+    color: #ff70a9;
+    
+}
+
+.detail1{
+    margin-top: 5px;
+    margin-left: 20%;
+    float: left;
+    color: #fff;
+    width: 40%;
+    border-radius: 15px;
+    background-color: #ff70a9;
 }
